objects/Q4__Qvidian_Login__c.object
<CustomObject>
    <fields>
        <fullName>Q4__Device_type__c</fullName>
        <description>Describes the type of the device user logged in from - phone, tablet, etc.</description>
        <label>Device type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__IPaddress__c</fullName>
        <label>IP address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__LoginDateTime__c</fullName>
        <label>Login DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Q4__Login_Source__c</fullName>
        <label>Login Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>iPad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q4__LogoutDateTime__c</fullName>
        <label>Logout DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Q4__OS__c</fullName>
        <description>OS type the device user logged in from.</description>
        <label>OS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Qvidian_Login_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>[Obsolete] Qvidian Login Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Q4__SessionDuration__c</fullName>
        <label>Session Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q4__Session_ID__c</fullName>
        <description>Uniquely identifies the login session</description>
        <externalId>true</externalId>
        <label>Session ID</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Q4__User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User_Id</label>
        <referenceTo>Q4__Qvidian_User__c</referenceTo>
        <relationshipLabel>Qvidian Logins</relationshipLabel>
        <relationshipName>Qvidian_Logins</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Qvidian Login</label>
    <nameField>
        <label>Qvidian Login Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qvidian Logins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Q4__SourceIsInPicklist</fullName>
        <active>true</active>
        <description>Validates that supplied value corresponds to available pick list entries for Login source type.</description>
        <errorConditionFormula>CASE( Q4__Login_Source__c ,
  &quot;Web&quot;, 1,
  &quot;iPad&quot;, 1,
  &quot;SF1&quot;, 1,
   0) = 0</errorConditionFormula>
        <errorDisplayField>Q4__Login_Source__c</errorDisplayField>
        <errorMessage>Login Source value must be either &quot;Web&quot;, &quot;iPad&quot; or &quot;SF1&quot;.</errorMessage>
    </validationRules>
</CustomObject>